Bug 443114 - Duplicates in drop-down box
Summary: Duplicates in drop-down box
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_powerdevil (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-29 13:43 UTC by Oleg Solovyov
Modified: 2021-09-29 14:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
dupe (18.81 KB, image/jpeg)
2021-09-29 13:43 UTC, Oleg Solovyov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Solovyov 2021-09-29 13:43:55 UTC
Created attachment 142005 [details]
dupe

STEPS TO REPRODUCE
1. System Settings -> Power Management -> Activity Power Settings
2. Define a special behavior
3. Click on "Always [ACTION] after ..."

OBSERVED RESULT
see screenshot

EXPECTED RESULT
No duplicates

Linux/KDE Plasma: 5.11.0-37
(available in About System)
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
KDE Neon Unstable Edition
Comment 1 Bug Janitor Service 2021-09-29 13:47:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/59
Comment 2 Oleg Solovyov 2021-09-29 14:28:45 UTC
Git commit 3a7ce4c310c3170115fc15f816b9a45fc5ada76d by Oleg Solovyov.
Committed on 29/09/2021 at 13:45.
Pushed by ngraham into branch 'master'.

Clear alwaysActionBox before filling

M  +1    -0    kcmodule/activities/activitywidget.cpp

https://invent.kde.org/plasma/powerdevil/commit/3a7ce4c310c3170115fc15f816b9a45fc5ada76d
Comment 3 Nate Graham 2021-09-29 14:29:14 UTC
Git commit 20385f4d5372348b3a4c41450145a4c7226d43ba by Nate Graham, on behalf of Oleg Solovyov.
Committed on 29/09/2021 at 14:29.
Pushed by ngraham into branch 'Plasma/5.23'.

Clear alwaysActionBox before filling


(cherry picked from commit 3a7ce4c310c3170115fc15f816b9a45fc5ada76d)

M  +1    -0    kcmodule/activities/activitywidget.cpp

https://invent.kde.org/plasma/powerdevil/commit/20385f4d5372348b3a4c41450145a4c7226d43ba