Clear alwaysActionBox before filling

BUG: 443114